# SpecUtils

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SpecUtilsConfig.cmake.in  out.txt
.github/workflows/: c.yml  ci.yml  csharp.yml  java.yml  java_jni.yml  node.yml  pip.yml  update-bleeding-edge.yml  wasm.yml  wheels.yml
SpecUtils/: CAMIO.h  CubicSpline.h  D3SpectrumExport.h  D3SpectrumExportResources.h.in  DateTime.h  EnergyCalibration.h  Filesystem.h  ParseUtils.h  PcfExtensions.h  PcfUtils.h  RapidXmlUtils.hpp  SerialToDetectorModel.h  SpecFile.h  SpecFile_location.h  SpecUtilsAsync.h  SpecUtils_config.h.in  SpectrumDataStructs.h  StringAlgo.h  UriLossySpectrum.h  UriSpectrum.h  UtilityFunctions.h
bindings/c/: SpecUtils_c.cpp  SpecUtils_c.h
bindings/csharp/: README.md  SpecUtils.sln
bindings/csharp/SpecUtils/: EnergyCalibration.cs  Enums.cs  Measurement.cs  NativeLibraryResolver.cs  NativeMethods.cs  SpecFile.cs  SpecUtils.csproj
bindings/csharp/SpecUtils.Example/: Program.cs  SpecUtils.Example.csproj
bindings/csharp/SpecUtils.Tests/: SmokeTests.cs  SpecUtils.Tests.csproj
bindings/java/: CMakeLists.txt  README.md
bindings/java/src/main/cpp/: SpecUtilsJni.cpp
bindings/java/src/main/java/gov/sandia/specutils/: DetectorType.java  EnergyCalType.java  EnergyCalibration.java  Measurement.java  OccupancyStatus.java  ParserType.java  QualityStatus.java  SaveSpectrumAsType.java  SourceType.java  SpecFile.java  SpecUtilsException.java
bindings/java/src/main/java/gov/sandia/specutils/internal/: HandleCleaner.java  Native.java  NativeLibraryLoader.java
bindings/java/src/test/java/gov/sandia/specutils/: SpecUtilsCli.java  SpecUtilsTest.java
bindings/node/: CMakeLists.txt  README.md  SpecUtilsJS.cpp  SpecUtilsJS.h  example.js  linux_build.sh  package.json
bindings/python/: CMakeLists.txt  Ex_pyconverted.chn  Ex_pyconverted.n42  Ex_pyconverted_writeToFile.chn  Ex_pyconverted_writeToStream.chn  README.md  SpecFile_py.cpp  SpectrumDataStructs_py.cpp  __init__.py  build-4-python.ps1  ex_output.pcf  get-boost.ps1  make-wheel.ps1  make_html_plot.py  passthrough.n42  pyproject.toml  setup.py  test_python.py
bindings/python/examples/: make_file_example.py  test_python.py
bindings/python/tests/: test_specutils.py
bindings/swig/: CMakeLists.txt  README.md  SpecUtils.i  boost_ptime.i
bindings/swig/csharp/: AssemblyInfo.cs.template  CMakeLists.txt  README.md  SpecUtils.targets  SpecUtilsCSharp.i  SpecUtilsCSharp_wrap.cxx  Test.cs  swig-gen.ps1  swig-gen.sh
bindings/swig/fortran/: CMakeLists.txt  SpecUtilsFortran.i  SpecUtilsFortran_wrap.cxx  SpecUtilsWrap.f90  build-and-test.sh  swig-gen.sh  test_specutils_fortran.f90
bindings/swig/java_example/: HowToCreateJavaWrappersForC++Code.txt  Main.java  readme.txt
bindings/swig/java_test/: README_linux.md  README_macos.md  README_windows.md  SpecUtilsCli.java  TestSpecUtils.java
bindings/wasm/: CMakeLists.txt  README.md  SpecUtilsWasm.cpp  specutils_web.js
bindings/wasm/examples/cli/: specutils_cli.cpp
bindings/wasm/examples/standalone/: README.md  specutils_example.html
bindings/wasm/examples/viewer/: assemble_html.py  specutils_web.html
d3_resources/: README.txt  SpectrumChartD3.css  SpectrumChartD3.css.pre20190715  SpectrumChartD3.d3v5.inprogress.js  SpectrumChartD3.js  SpectrumChartD3StandAlone.css  colordev.html  d3.v3.min.js  example_json_input.html  example_json_input.json  example_json_with_peaks.json  index.html
d3_resources/PlaywrightTests/: .gitignore  README.md  playwright.config.js  static-server.js
d3_resources/PlaywrightTests/harness/: harness.html
d3_resources/PlaywrightTests/lib/: harness.js  touch.js
d3_resources/PlaywrightTests/tests/: mouse.spec.js  peaks.spec.js  resize.spec.js  slider.spec.js  smoke.spec.js  touch.spec.js
d3_resources/d3-slim-build/: .gitignore  README.md  build_d3_slim.sh  d3-slim.js  license-header.js  package.json  verify_api.js
d3_resources/d3-slim-build/patches/: behavior-index.js  en-US.js  locale.js  math-index.js  scale-index.js  svg-index.js
examples/: CMakeLists.txt  c_interface_example.c  convert_to_cnf.cpp  convert_to_n42.cpp
examples/d3_chart_example/: README.md  self_contained_example.html
examples/d3_chart_example/json_example/: SpectrumChartD3.js  example_json_input.html  example_json_input.json
fuzz_test/: CMakeLists.txt  README.md  file_parse_fuzz.cpp  fuzz_interface.cpp  fuzz_interface.h  fuzz_str_utils.cpp  fuzz_uri_spectrum.cpp  run_one_file_parse.cpp
regression_test/: CMakeLists.txt  regression_test.cpp
src/: CAMIO.cpp  CubicSpline.cpp  D3SpectrumExport.cpp  DateTime.cpp  EnergyCalibration.cpp  Filesystem.cpp  ParseUtils.cpp  SerialToDetectorModel.cpp  SpecFile.cpp  SpecFile_aram.cpp  SpecFile_asc.cpp  SpecFile_aspect.cpp  SpecFile_chn.cpp  SpecFile_cnf.cpp  SpecFile_csv.cpp  SpecFile_gr135.cpp  SpecFile_json.cpp  SpecFile_lis.cpp  SpecFile_location.cpp  SpecFile_lsrm.cpp  SpecFile_lzs.cpp  SpecFile_mca.cpp  SpecFile_mps.cpp  SpecFile_multiact.cpp  SpecFile_n42.cpp  SpecFile_pcf.cpp  SpecFile_phd.cpp  SpecFile_radiacode.cpp  SpecFile_spc.cpp  SpecFile_spe.cpp  SpecFile_spmdf.cpp  SpecFile_template.cpp  SpecFile_tka.cpp  SpecFile_uraider.cpp  SpecFile_uri.cpp  SpecFile_xml_other.cpp  SpecUtilsAsync.cpp  SpectrumDataStructs.cpp  StringAlgo.cpp  UriLossySpectrum.cpp  (+2 more)
testing/: regression_test.cpp
unit_tests/: CMakeLists.txt  test_c_interface.cpp  test_cubic_spline.cpp  test_energy_calibration.cpp  test_filesystem_functions.cpp  test_hash.cpp  test_iso_time_string.cpp  test_rebin_by_lower_energy.cpp  test_safe_get_line.cpp  test_spec_file.cpp  test_spec_file_open.cpp  test_spec_file_roundtrip.cpp  test_split_to_floats_and_ints.cpp  test_string_functions.cpp  test_time_from_string.cpp  test_uri_spectrum.cpp  test_utf8_limit_str_size.cpp  test_utf8_str_len.cpp
unit_tests/test_data/: datetimes.txt
unit_tests/test_data/spectra/: Mn56_DetX_Shielded.n42
unit_tests/test_data/txt/: test_string_functions_input.txt  test_string_functions_output.txt
